Adding display line.
I have added the line as a paragraph which will display the numbers and their results in to the program.

--- a/calcHTML.html
+++ b/calcHTML.html
@@ -3,3 +3,8 @@
 <!--Zeshan Ahmad Caculator program.-->
 
 <h1>Calculator Program<h1>
+  
+<!--Calculator display line-->
+<p id="display">Welcome to the program.</p>
+  
+ </html>
