fixing some mistakes.
Added the body and head tags and an html starting tag.

--- a/calcHTML.html
+++ b/calcHTML.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-
+<html>
+  
 <!--Zeshan Ahmad Caculator program.-->
-
+  
+<head>
+</head>
+ 
+<body>
 <h1>Calculator Program<h1>
   
 <!--Calculator display line-->
 <p id="display">Welcome to the program.</p>
   
+ </body>
  </html>
