Added a number pad.
Added a series of lists to represent the number pad on the calculator.

--- a/calcHTML.html
+++ b/calcHTML.html
@@ -12,5 +12,25 @@
 <!--Calculator display line-->
 <p id="display">Welcome to the program.</p>
   
+ <!--Calculator Number Pad--> 
+ <ul>
+	<li> <button> 7 </button> </li>
+	<li> <button> 8 </button> </li>
+	<li> <button> 9 </button> </li>
+</ul>
+
+<ul>
+	<li> <button> 4 </button> </li>
+	<li> <button> 5 </button> </li>
+	<li> <button> 6 </button> </li>
+</ul>
+
+
+<ul>
+	<li><button>1</button></li>
+	<li><button>2</button></li>
+	<li><button>3</button></li>
+</ul>
+  
  </body>
  </html>
