Created a number pad look.
Used the style attribute in the head tag and br tags to create a number pad look to the list.

--- a/calcHTML.html
+++ b/calcHTML.html
@@ -4,6 +4,16 @@
 <!--Zeshan Ahmad Caculator program.-->
   
 <head>
+	
+<style>	
+li {
+	float:left
+}	
+ul {
+	list-style-type:none
+}
+</style>
+	
 </head>
  
 <body>
@@ -18,14 +28,17 @@
 	<li> <button> 8 </button> </li>
 	<li> <button> 9 </button> </li>
 </ul>
-
+	
+<br>
+	
 <ul>
 	<li> <button> 4 </button> </li>
 	<li> <button> 5 </button> </li>
 	<li> <button> 6 </button> </li>
 </ul>
 
-
+<br>
+	
 <ul>
 	<li><button>1</button></li>
 	<li><button>2</button></li>
