--- a/calcHTML.html
+++ b/calcHTML.html
@@ -27,6 +27,38 @@ function enterNum (aNum){
 	document.getElementById("display").innerHTML = aNum;
 }
 	
+/**addNum() will add num1 and num2 together and return the result.
+*INPUT: Two decimal numbers
+*OUTPUT: The result of the addition.
+*/
+function addNum(num1, num2){
+	return num1 + num2;
+}
+
+/**subNum() will subtract num1 and num2 together and return the result.
+*INPUT: Two decimal numbers
+*OUTPUT: The result of the subtraction.
+*/
+function subNum(num1, num2){
+	return num1 - num2;
+}
+
+/**addNum() will multiply num1 and num2 together and return the result.
+*INPUT: Two decimal numbers
+*OUTPUT: The result of the multiplication.
+*/
+function multNum(num1, num2){
+	return num1 * num2;
+}
+
+/**addNum() will divide num1 and num2 together and return the result.
+*INPUT: Two decimal numbers
+*OUTPUT: The result of the division.
+*/
+function divNum(num1, num2){
+	return num1 / num2;
+}
+	
 </script>
 	
 </head>
